--- a/app/src/main/res/values-pt/general.xml
+++ b/app/src/main/res/values-pt/general.xml
@@ -17,4 +17,9 @@
     <string name="text_search">Pesquisar</string>
     <string name="text_add_contact">Adicionar contato</string>
     <string name="text_finish">Concluir</string>
+    <string name="text_gallery">Galeria</string>
+    <string name="text_camera">Câmera</string>
+    <string name="text_location">Localização</string>
+    <string name="text_audio">Áudio</string>
+    <string name="text_document">Documento</string>
 </resources>
