--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -27,4 +27,9 @@
     <string name="text_search">Buscar</string>
     <string name="text_add_contact">Agregar contacto</string>
     <string name="text_finish">Finalizar</string>
+    <string name="text_gallery">Galería</string>
+    <string name="text_camera">Cámara</string>
+    <string name="text_location">Ubicación</string>
+    <string name="text_audio">Audio</string>
+    <string name="text_document">Documento</string>
 </resources>
