--- a/app/src/main/res/values-fr/security_settings.xml
+++ b/app/src/main/res/values-fr/security_settings.xml
@@ -7,4 +7,5 @@
     <string name="text_time_to_request_access_pin">Temps de demande de code d\'accès</string>
     <string name="text_account_recovery_information">Informations de récupération de compte</string>
     <string name="text_allow_download_attachments">Autoriser le téléchargement des pièces jointes envoyées</string>
+    <string name="text_unlock_options">Opciones de desbloqueo</string>
 </resources>
