--- a/app/src/main/res/layout/time_access_pin_dialog_fragment.xml
+++ b/app/src/main/res/layout/time_access_pin_dialog_fragment.xml
@@ -50,6 +50,15 @@
             app:layout_constraintTop_toBottomOf="@id/view_title_separator">
 
             <com.google.android.material.radiobutton.MaterialRadioButton
+                android:id="@+id/radioButton_immediately"
+                style="@style/BodyTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="@dimen/x_large_padding"
+                android:paddingEnd="0dp"
+                android:text="@string/text_immediately" />
+
+            <com.google.android.material.radiobutton.MaterialRadioButton
                 android:id="@+id/radioButton_ten_seconds"
                 style="@style/BodyTextView"
                 android:layout_width="match_parent"
@@ -77,15 +86,6 @@
                 android:text="@string/text_one_minute" />
 
             <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radioButton_two_minutes"
-                style="@style/BodyTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/x_large_padding"
-                android:paddingEnd="0dp"
-                android:text="@string/text_two_minutes" />
-
-            <com.google.android.material.radiobutton.MaterialRadioButton
                 android:id="@+id/radioButton_five_minutes"
                 style="@style/BodyTextView"
                 android:layout_width="match_parent"
@@ -95,13 +95,31 @@
                 android:text="@string/text_five_minutes" />
 
             <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radioButton_immediately"
+                android:id="@+id/radioButton_one_hour"
                 style="@style/BodyTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/x_large_padding"
                 android:paddingEnd="0dp"
-                android:text="@string/text_immediately" />
+                android:text="@string/text_one_hour" />
+
+            <com.google.android.material.radiobutton.MaterialRadioButton
+                android:id="@+id/radioButton_one_day"
+                style="@style/BodyTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="@dimen/x_large_padding"
+                android:paddingEnd="0dp"
+                android:text="@string/text_one_day" />
+
+            <com.google.android.material.radiobutton.MaterialRadioButton
+                android:id="@+id/radioButton_never"
+                style="@style/BodyTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="@dimen/x_large_padding"
+                android:paddingEnd="0dp"
+                android:text="@string/text_never" />
 
         </RadioGroup>
 
