--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,8 @@
         android:id="@+id/splashFragment"
         android:name="com.naposystems.pepito.ui.splash.SplashFragment"
         android:label="splash_fragment"
-        tools:layout="@layout/splash_fragment">
+        tools:layout="@layout/splash_fragment"
+        app:startDestination="@id/action_splashFragment_to_unlockAppTimeFragment">
         <action
             android:id="@+id/action_splashFragment_to_landingFragment"
             app:destination="@id/landingFragment"
@@ -25,17 +26,29 @@
             app:popUpTo="@+id/nav_graph"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_splashFragment_to_homeFragment"
-            app:destination="@id/homeFragment"
-            app:popUpTo="@+id/nav_graph"
-            app:popUpToInclusive="true" />
-        <action
             android:id="@+id/action_splashFragment_to_accessPinFragment"
             app:destination="@id/accessPinFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right"
+            app:popUpTo="@+id/nav_graph"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_splashFragment_to_enterPinFragment"
+            app:destination="@id/enterPinFragment"
+            app:popUpTo="@+id/nav_graph"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_splashFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@+id/nav_graph"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_splashFragment_to_unlockAppTimeFragment"
+            app:destination="@id/unlockAppTimeFragment"
+            app:popUpTo="@+id/nav_graph"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/landingFragment"
@@ -55,7 +68,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
 
     <fragment
@@ -181,6 +194,13 @@
         <action
             android:id="@+id/action_securitySettingsFragment_to_registerRecoveryAccountFragment"
             app:destination="@id/registerRecoveryAccountFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_securitySettingsFragment_to_activateBiometricsFragment"
+            app:destination="@id/activateBiometricsFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -311,7 +331,8 @@
     <fragment
         android:id="@+id/recoveryAccountFragment"
         android:name="com.naposystems.pepito.ui.recoveryAccount.RecoveryAccountFragment"
-        android:label="@string/text_recovery_account">
+        android:label="@string/text_recovery_account"
+        tools:layout="@layout/recovery_account_fragment">
         <action
             android:id="@+id/action_recoveryAccountFragment_to_recoveryAccountQuestionsFragment"
             app:destination="@id/recoveryAccountQuestionsFragment" />
@@ -347,5 +368,46 @@
         <argument
             android:name="bitmap"
             app:argType="android.graphics.Bitmap" />
+    </fragment>
+    <fragment
+        android:id="@+id/enterPinFragment"
+        android:name="com.naposystems.pepito.ui.enterPin.EnterPinFragment"
+        android:label="EnterPinFragment"
+        tools:layout="@layout/enter_pin_fragment"
+        app:startDestination="@id/action_enterPinFragment_to_unlockAppTimeFragment">
+        <action
+            android:id="@+id/action_enterPinFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:popUpTo="@+id/nav_graph"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_enterPinFragment_to_unlockAppTimeFragment"
+            app:destination="@id/unlockAppTimeFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/activateBiometricsFragment"
+        android:name="com.naposystems.pepito.ui.activateBiometrics.ActivateBiometricsDialogFragment"
+        android:label="@string/text_unlock_options"
+        tools:layout="@layout/activate_biometrics_dialog_fragment" />
+    <fragment
+        android:id="@+id/unlockAppTimeFragment"
+        android:name="com.naposystems.pepito.ui.unlockAppTime.UnlockAppTimeFragment"
+        android:label="UnlockAppTimeFragment"
+        tools:layout="@layout/unlock_app_time_fragment">
+        <action
+            android:id="@+id/action_unlockAppTimeFragment_to_enterPinFragment"
+            app:destination="@id/enterPinFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
 </navigation>
