--- a/app/src/main/res/values-it/time_access_pin.xml
+++ b/app/src/main/res/values-it/time_access_pin.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="text_immediately">subito</string>
+    <string name="text_ten_seconds">10 secondi</string>
     <string name="text_thirty_seconds">30 secondi</string>
     <string name="text_one_minute">1 minuto</string>
-    <string name="text_two_minutes">2 minuti</string>
     <string name="text_five_minutes">5 minuti</string>
-    <string name="text_immediately">subito</string>
+    <string name="text_one_hour">1 ora</string>
+    <string name="text_one_day">1 giorno</string>
+    <string name="text_never">mai</string>
     <string name="text_desc_pin_locked_time">Il pin di accesso viene richiesto dopo che è trascorso il tempo selezionato, dopo aver bloccato l\'app.</string>
-    <string name="text_ten_seconds">10 secondi</string>
 </resources>
