--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
     <declare-styleable name="EnterCodeWidget">
         <attr name="numBoxes" format="integer" />
         <attr name="isSecureText" format="boolean" />
+        <attr name="errorText" format="string" />
     </declare-styleable>
 
     <declare-styleable name="InputPanelWidget">
