--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,8 +9,8 @@
         android:id="@+id/splashFragment"
         android:name="com.naposystems.pepito.ui.splash.SplashFragment"
         android:label="splash_fragment"
-        tools:layout="@layout/splash_fragment"
-        app:startDestination="@id/action_splashFragment_to_unlockAppTimeFragment">
+        app:startDestination="@id/action_splashFragment_to_unlockAppTimeFragment"
+        tools:layout="@layout/splash_fragment">
         <action
             android:id="@+id/action_splashFragment_to_landingFragment"
             app:destination="@id/landingFragment"
@@ -32,9 +32,9 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
-            app:popExitAnim="@anim/slide_out_right"
-            app:popUpTo="@+id/nav_graph"
-            app:popUpToInclusive="true" />
+        app:popExitAnim="@anim/slide_out_right"
+        app:popUpTo="@+id/nav_graph"
+        app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_splashFragment_to_enterPinFragment"
             app:destination="@id/enterPinFragment"
@@ -342,6 +342,9 @@
         <action
             android:id="@+id/action_conversationFragment_to_previewImageSendFragment"
             app:destination="@id/previewImageSendFragment" />
+        <action
+            android:id="@+id/action_conversationFragment_to_contactProfileFragment"
+            app:destination="@id/contactProfileFragment" />
     </fragment>
     <fragment
         android:id="@+id/recoveryAccountFragment"
@@ -388,8 +391,8 @@
         android:id="@+id/enterPinFragment"
         android:name="com.naposystems.pepito.ui.enterPin.EnterPinFragment"
         android:label="EnterPinFragment"
-        tools:layout="@layout/enter_pin_fragment"
-        app:startDestination="@id/action_enterPinFragment_to_unlockAppTimeFragment">
+        app:startDestination="@id/action_enterPinFragment_to_unlockAppTimeFragment"
+        tools:layout="@layout/enter_pin_fragment">
         <action
             android:id="@+id/action_enterPinFragment_to_homeFragment"
             app:destination="@id/homeFragment"
@@ -430,4 +433,13 @@
         android:name="com.naposystems.pepito.ui.addContact.AddContactFragment"
         android:label="@string/text_friend_requests"
         tools:layout="@layout/add_contact_fragment" />
+    <fragment
+        android:id="@+id/contactProfileFragment"
+        android:name="com.naposystems.pepito.ui.contactProfile.ContactProfileFragment"
+        android:label="ContactProfileFragment"
+        tools:layout="@layout/contact_profile_fragment" >
+        <argument
+            android:name="contactId"
+            app:argType="integer" />
+    </fragment>
 </navigation>
