--- a/app/src/main/res/layout/validate_nickname_fragment.xml
+++ b/app/src/main/res/layout/validate_nickname_fragment.xml
@@ -56,7 +56,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/normal_margin"
                         android:layout_marginBottom="@dimen/small_margin"
-                        android:hint="@string/text_nickname"
+                        android:hint="@string/text_nickname_with_asterisk"
                         android:nextFocusDown="@id/text_input_layout_display_name"
                         app:errorEnabled="true"
                         app:layout_constraintBottom_toTopOf="@+id/text_input_layout_display_name"
