--- a/app/src/main/res/values-fr/general.xml
+++ b/app/src/main/res/values-fr/general.xml
@@ -7,6 +7,7 @@
     <string name="text_next">Suivant</string>
     <string name="text_fail">Quelque chose s\'est mal passé, veuillez réessayer</string>
     <string name="text_name">Nom</string>
+    <string name="text_nickname_with_asterisk">Surnom*</string>
     <string name="text_status">Etat</string>
     <string name="text_blocked_contacts">Contacts bloqués</string>
     <string name="label_edit_photo">Modifier la photo</string>
@@ -28,4 +29,6 @@
     <string name="text_add">Ajouter</string>
     <string name="text_sent">Envoyé</string>
     <string name="text_refuse">Refuser</string>
+    <string name="text_information">DES INFORMATIONS</string>
+    <string name="text_nickname">Surnom</string>
 </resources>
