--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="linkTextColor">#29ABE2</color>
     <color name="white">#f2f2f2</color>
     <color name="black">#000000</color>
+    <color name="black_212121">#212121</color>
+    <color name="gray_F2F2F4">#F2F2F4</color>
     <color name="black_40">#66000000</color>
     <color name="colorError">#EF5350</color>
     <color name="separator">#CCCCCC</color>
