--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -284,4 +284,10 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="FabPrimary">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@color/buttonTint</item>
+    </style>
+
 </resources>
