--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,8 +74,8 @@
                     android:id="@+id/screenSaver"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:background="@color/white"
-                    android:elevation="10dp"
+                    android:background="@color/colorBackground"
+                    android:elevation="30dp"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
