--- a/app/src/main/res/layout/register_recovery_account_question_fragment.xml
+++ b/app/src/main/res/layout/register_recovery_account_question_fragment.xml
@@ -89,6 +89,7 @@
 
                 <Spinner
                     android:id="@+id/spinner_questions"
+                    style="@style/BackgroundSpinner"
                     android:layout_width="0dp"
                     android:layout_height="54dp"
                     android:layout_marginTop="@dimen/normal_margin"
@@ -97,7 +98,6 @@
                     app:layout_constraintEnd_toEndOf="@id/guideline_end"
                     app:layout_constraintStart_toStartOf="@id/guideline_start"
                     app:layout_constraintTop_toBottomOf="@+id/textView_control_question"
-                    android:background="@drawable/border_spinner"
                     android:spinnerMode="dropdown"
                     tools:listitem="@layout/contact_us_item" />
 
@@ -136,6 +136,7 @@
                     android:visibility="gone"
                     android:enabled="false"
                     app:icon="@drawable/ic_arrow_right_primary"
+                    app:iconTint="@color/buttonTint"
                     app:layout_constraintBottom_toTopOf="@id/button_cancel"
                     app:layout_constraintEnd_toEndOf="@id/guideline_end"
                     app:layout_constraintStart_toStartOf="@id/guideline_start" />
