--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -127,7 +127,9 @@
             app:argType="boolean" />
         <action
             android:id="@+id/action_accessPinFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:popUpTo="@+id/nav_graph"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -350,7 +352,8 @@
         tools:layout="@layout/recovery_account_fragment">
         <action
             android:id="@+id/action_recoveryAccountFragment_to_recoveryAccountQuestionsFragment"
-            app:destination="@id/recoveryAccountQuestionsFragment" />
+            app:destination="@id/recoveryAccountQuestionsFragment"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/recoveryAccountQuestionsFragment"
@@ -366,13 +369,6 @@
         <action
             android:id="@+id/action_recoveryAccountQuestionsFragment_to_accessPinFragment"
             app:destination="@id/accessPinFragment" />
-        <action
-            android:id="@+id/action_conversationFragment_to_previewImageSendFragment"
-            app:destination="@id/previewImageSendFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/previewImageSendFragment"
