--- a/app/src/main/res/values-de/contacts.xml
+++ b/app/src/main/res/values-de/contacts.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="text_my_contacts">Kontakte</string>
+    <string name="text_description_empty_state_contacts">Füge deine Freunde hinzu und teile sie auf sichere und private Weise.</string>
+    <string name="text_wish_block_contact">Möchtest du %1$s wirklich blockieren?</string>
+    <string name="text_wish_delete_contact">Möchtest du %1%s wirklich entfernen?</string>
+    <string name="text_blocked_contact">Kontakt blockiert</string>
+    <string name="text_deleted_contact">Kontakt gelöscht</string>
 </resources>
