--- a/app/src/main/res/values-it/blocked_contacts.xml
+++ b/app/src/main/res/values-it/blocked_contacts.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="text_blocked_contacts_info">I contatti in questo elenco non saranno in grado di comunicare con te o accedere al tuo profilo.</string>
+    <string name="unblock_contact">Sblocca contatto</string>
+    <string name="text_description_empty_state_blocked_contacts">Non ha contatti bloccati</string>
+    <string name="text_blocked_contact_not_found">Ups! Tu búsqueda no trajo resultados</string>
 </resources>
