--- a/app/src/main/res/values/blocked_contacts.xml
+++ b/app/src/main/res/values/blocked_contacts.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="text_blocked_contacts_info">Los contactos en este listado no podrán comunicarse contigo ni acceder a tu perfil.</string>
+    <string name="unblock_contact">Desbloquear Contacto</string>
+    <string name="text_description_empty_state_blocked_contacts">No tiene contactos bloqueados</string>
+    <string name="text_blocked_contact_not_found">Ups! Tu búsqueda no trajo resultados</string>
 </resources>
