--- a/app/src/main/res/layout/add_contact_fragment.xml
+++ b/app/src/main/res/layout/add_contact_fragment.xml
@@ -118,7 +118,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/normal_margin"
-                            android:text="Busque Puto"
+                            android:text="@string/text_description_empty_state_blocked_contacts"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
